LU-8037 fileset: reject dotdot as a path component

Administrator might access Lustre internal files by
using dotdot path for example:

mount -t lustre ip@tcp:/lustre/.. /mnt/lustre

Signed-off-by: Wang Shilong <wshilong@ddn.com>
Change-Id: I137e12aa3f2feacb8549eb85f966c9dc8426f3af
Reviewed-on: http://review.whamcloud.com/19646
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Li Xi <lixi@ddn.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>